--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import RecordPlayerContainer from '../components/RecordPlayerContainer.astro'
+
 const {title} = Astro.props
 ---
 
@@ -11,6 +13,6 @@ const {title} = Astro.props
     <title>{title}</title>
 </head>
 <body>
-   
+   <RecordPlayerContainer />
 </body>
 </html>
