--- a/src/components/RecordPlayerContainer.astro
+++ b/src/components/RecordPlayerContainer.astro
@@ -4,8 +4,14 @@
 <style>
     .record-player
     {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: var(--record-player-background-color);
         height: 400px;
-        width: 100%;
+        width: 80%;
+        max-width: 700px;
+        border-radius: calc(var(--base-border-radius) * 2);
     }
 </style>
