--- a/src/components/RecordPlayerContainer.astro
+++ b/src/components/RecordPlayerContainer.astro
@@ -1,4 +1,10 @@
-<div class="record-player" id="record_player"></div>
+---
+import Turntable from './Turntable.astro'
+---
+
+<div class="record-player" id="record_player">
+    <Turntable />
+</div>
 
 
 <style>
