UI created for the play/pause and stop button

--- a/src/components/RecordPlayerContainer.astro
+++ b/src/components/RecordPlayerContainer.astro
@@ -1,9 +1,11 @@
 ---
 import Turntable from './Turntable.astro'
+import ControlButtonsContainer from './ControlButtonsContainer.astro'
 ---
 
 <div class="record-player" id="record_player">
     <Turntable />
+    <ControlButtonsContainer />
 </div>
 
 
