--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import RecordPlayerContainer from '../components/RecordPlayerContainer.astro'
+import CoversContainer from '../components/CoversContainer.astro'
 
 const {title} = Astro.props
 ---
@@ -14,5 +15,6 @@ const {title} = Astro.props
 </head>
 <body>
    <RecordPlayerContainer />
+   <CoversContainer />
 </body>
 </html>
