--- a/src/components/CoversContainer.astro
+++ b/src/components/CoversContainer.astro
@@ -1,4 +1,11 @@
-<div class="container covers-container" id="covers_container"></div>
+---
+import Covers from './Covers.astro'
+---
+
+
+<div class="container covers-container" id="covers_container">
+    <Covers />
+</div>
 
 
 <style>
